# anacondaworkshop01

./: README.md  pyproject.toml
anacondaworkshop01/: conf.py  main.py  util.py
db/: dbfile.db  ddl.sql
tests/: test_util.py
tests/files/: Testfund.28-02-2023 breakdown.csv
