[tool.poetry]
name = "anacondaworkshop01"
version = "0.1.0"
description = ""
authors = ["Erico Djasmeini <ericodjasmeini@gic.com.sg>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
duckdb = "^1.2.2"
pydantic = "^2.11.4"
ruff = "^0.11.8"
sqlalchemy = "^2.0.40"
pandas = "^2.2.3"


[[tool.poetry.source]]
name = "jfrog"
url = "https://jfrogcloud.gic.com.sg/artifactory/api/pypi/python-all/simple"
priority = "primary"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
